# 99Problems

./: HaskellProblems.cabal  README.md  stack.yaml
src/: Types.hs
src/Solutions/: Arithmetic.hs  Lists.hs  Logic.hs  Trees.hs  TypePuzzles.hs
test/: Spec.hs  TestLoop.hs  Utils.hs
test/Problems/: Arithmetic.hs  Lists.hs
