name:                HaskellProblems
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/HaskellProblems#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Solutions.Lists
  build-depends:       base >= 4.7 && < 5
                     , tasty-quickcheck
  default-language:    Haskell2010


test-suite HaskellProblems-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , containers
                     , tasty-quickcheck
                     , HaskellProblems

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/smobs/HaskellProblems
